[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hex-maze-neuro"
version = "1.0.3"
description = "A Python toolkit for generating, visualizing, and analyzing hex maze configurations and optimal barrier change sequences for the hex maze task developed by the Berke Lab at UCSF."
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [
    { name="Stephanie Crater", email="stephcrater@berkeley.edu" },
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
]
dependencies = [
    "networkx>=3.3",
    "matplotlib",
    "numpy>=2.0.0",
    "pandas",
    "tqdm",
]

[project.urls]
"Homepage" = "https://github.com/calderast/Hex-maze"
"Bug Tracker" = "https://github.com/calderast/Hex-maze/issues"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["hexmaze*"]

[tool.black]
line-length = 120